--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 #container {
-    width: 100%;
-    height: 100%;
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+}
+
+.rowContainer {
+    flex-direction: row;
+    justify-content: start;
+}
+
+.row {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   background-color: #f30404;
+   border: 1px solid black;
+   color: black;
+   height:100px;
+   width:100px;
+   margin: auto;
 }
