--- a/style.css
+++ b/style.css
@@ -1,37 +1,3 @@
-/* Large container for the whole page */
-#container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    margin: auto;
-}
-
-/* Container for each individual row */
-.rowContainer {
-    flex-direction: row;
-    justify-content: center;
-    max-width: 960px;
-    max-height: 960px;
-    width: auto;
-    height: auto;
-    margin:auto;
-}
-
-/* Div properties */
-.rowItem {
-   background-color: #a0a5af;
-   border: 1px solid #190217;
-   color: black;
-   height:50px;
-   width:50px;
-   margin: auto;
-}
-
-.etchedItem {
-    background-color: #021719;
-}
-
 header {
     width: 100%;
     display: flex;
@@ -39,6 +5,35 @@ header {
     justify-content: center;
     padding-top: 25px;
     margin-bottom: 25px;
+}
+
+/* Large container for the whole page */
+#container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
+    border: 1px solid black;
+}
+
+/* Container for each individual row */
+.rowContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Div properties */
+.rowItem {
+   background-color: #a0a5af;
+   margin: auto;
+   height:20px;
+   width: 20px;
+}
+
+.etchedItem {
+    background-color: #021719;
 }
 
 #clearButton {
